--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,11 +1,18 @@
-title: default-project-template
+title: Olympic rings
 hero_image: images/banner.png
-description: default-project-template description
+description: Create a program that will accurately draw the Olympic rings.
 version: 4
 listed: false
 copyedit: false
-last_tested: "2022-05-19"
+last_tested: "2024-07-24"
 steps:
-  - title: Introduction
-  - title: Step title
+  - title: What you will make
+  - title: Set up the rings
+    completion:
+    - engaged
+  - title: Draw the rings
+    completion:
+    - internal
   - title: What next?
+    completion:
+    - external
