--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,8 +2,8 @@ title: Olympic rings
 hero_image: images/banner.png
 description: Create a program that will accurately draw the Olympic rings.
 version: 4
-listed: false
-copyedit: false
+listed: true
+copyedit: true
 last_tested: "2024-07-24"
 steps:
   - title: What you will make
